chore: remove unused code

--- a/ndev_task_tracker_title_classiefier.ipynb
+++ b/ndev_task_tracker_title_classiefier.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -114,11 +113,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "# 1. Load the Universal Sentence Encoder Lite\n",
         "embed = hub.load(use_model_path)\n",
-        "\n",
-        "# 2. Load the SentencePiece tokenizer model directly from path\n",
         "sp = spm.SentencePieceProcessor()\n",
         "sp.load(f\"{use_model_path}/assets/universal_encoder_8k_spm.model\")"
       ],
@@ -300,6 +295,7 @@
         "    \"taking a break\",\n",
         "]\n",
         "\n",
+        "# can be useful when no valid_title detected\n",
         "project_tasks = [\n",
         "    \"writing code\",\n",
         "    \"writing unit tests\",\n",
@@ -425,16 +421,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# First split: 70% train, 30% val\n",
         "x_train, x_val, y_train, y_val = train_test_split(\n",
         "    embeddings.numpy(), labels, test_size=0.09, stratify=labels, random_state=5\n",
         ")\n",
-        "\n",
-        "# for now no need test split, because the data is small\n",
-        "# Second split: 30% val, 10% test from temp (i.e., 75/25 split of remaining 40%)\n",
-        "# X_val, X_test, y_val, y_test = train_test_split(\n",
-        "#     X_temp, y_temp, test_size=0.25, stratify=y_temp, random_state=42\n",
-        "# )\n",
         "\n",
         "print(len(x_train), len(x_val))"
       ],
@@ -659,8 +648,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "# Evaluate\n",
         "loss, acc = model.evaluate(x_val, y_val, verbose=0)\n",
         "print(f\"Val Accuracy: {acc:.2%}\")\n"
       ],
